hphp/hack/test/typecheck/namespace_infinite_loop1.php.exp
File "namespace_infinite_loop1.php", line 3, characters 3-7:
Expected expression (Parsing[1002])
